--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <script src="https://kit.fontawesome.com/e72e4d3ee3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
         <section class="Top-banner">
             <div class="article">
                 <h1>The Greatest Show on the Earth</h1>
-                <p id="text" title="Football is celebrated as 'the beautiful game' and the World Cup Tournament is considered the greatest show on Earth. It was the Brazilians who gave the epithet 'the beautiful game' to the sport. Though the game had its origin in England, its popularity today is due to the Latin American teams, particularly Brazil and to a certain extent Argentina.">Football is celebrated as "the beautiful game" and the World Cup Tournament is considered the greatest show on Earth. It was the Brazilians who gave the epithet "the beautiful game" to the sport. Though the game had its origin in England, its popularity today is due to the Latin American teams, particularly Brazil and to a certain extent Argentina.</p>
+                <p id="text">Football is celebrated as "the beautiful game" and the World Cup Tournament is considered the greatest show on Earth. It was the Brazilians who gave the epithet "the beautiful game" to the sport. Though the game had its origin in England, its popularity today is due to the Latin American teams, particularly Brazil and to a certain extent Argentina.</p>
                 <a href="https://www.fifa.com/fifaplus/en" target="_blank" id="button1"> Watch Now <i class="fa-light fa-greater-than"></i> </a>
             </div>
             <div>
@@ -33,56 +33,56 @@
     <!-- Mid Section -->
    <main id="menu">
     <Section class="select">
-        <a href="index1.html" class="button2" >Up Coming Match</a>
-        <a href="index2.html" class="button2" >All Groups</a>
-        <a href="index.html" class="button2" id="selected-button">Blog</a>
+        <a href="index1.html" class="button2">Up Coming Match</a>
+        <a href="index2.html" class="button2" id="selected-button">All Groups</a>
+        <a href="index.html" class="button2">Blog</a>
     </Section>
     <section class="blogs">
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/germany Flag.png" alt="">
+            <h2>Germany</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/Flag.png" alt="">
+            <h2>France</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/germany Flag.png" alt="">
+            <h2>Germany</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/Flag.png" alt="">
+            <h2>France</h2>
+            <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
+        </div><div class="blog">
+            <img src="assets/germany Flag.png" alt="">
+            <h2>Germany</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/Flag.png" alt="">
+            <h2>France</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/germany Flag.png" alt="">
+            <h2>Germany</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/Flag.png" alt="">
+            <h2>France</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
+            <img src="assets/germany Flag.png" alt="">
+            <h2>Germany</h2>
             <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
         </div>
-        <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
-            <h2>Transfer Live: Chlesea in talks over Kimpenbe transfer</h2>
-            <span><img src="assets/Time Icon.png" alt=""><p>10h</p><img src="assets/Chat Icon.png" alt=""><p>23</p></span>
-        </div>
+        
     </section>
 </main>
  <!-- Mid Section End-->
